--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node -e \"require('fs').copyFileSync('bths.html', 'dist/bths.html')\"",
     "preview": "vite preview"
   },
   "dependencies": {
